# slu-lib

./: .gitignore  CONTRIBUTING  Cargo.toml  deno.json  readme.md  todos.md
.cargo/: config.toml
.github/workflows/: ci.yml  next.yml  release.yml
.hooks/: pre-commit
bindings/: AhkVarList.ts  BluetoothMajor.ts  BluetoothMinor.ts  FancyToolbarSettingsByMonitor.ts  FloatingWindowSettings.ts  MonitorConfiguration.ts  Rect.ts  SeelenLauncherRunner.ts  SeelenLauncherSettings.ts  SeelenWallWallpaper.ts  SeelenWegSettings.ts  SeelenWegSide.ts  WidgetId.ts  WindowManagerSettingsByMonitor.ts  WorkspaceConfiguration.ts
npm/: package-lock.json  package.json  readme.md
npm/esm/: _dnt.shims.d.ts  _dnt.shims.d.ts.map  _dnt.shims.js  lib.d.ts
npm/script/: _dnt.shims.js  lib.d.ts.map  lib.js
npm/src/: _dnt.shims.ts  lib.ts
plugins/: hwinfo-monitor.slu
schemas/: settings.schema.json  theme.schema.json
scripts/: build.ts  build_npm.ts  rust_bindings.ts  version.ts
src/: error.rs  lib.rs  lib.test.ts  lib.ts  main.rs  rect.rs  resource.rs  resource.ts
src/constants/: mod.ts
src/handlers/: commands.rs  commands.ts  events.rs  events.ts  index.ts  invokers.ts  mod.rs  mod.ts
src/re-exports/: tauri.ts
src/resource/: mod.rs  resource_id.rs
src/state/: icon_pack.rs  icon_pack.test.ts  icon_pack.ts  index.ts  mod.rs  mod.ts  placeholder.rs  placeholder.ts  plugin.rs  plugin.ts  profile.ts  settings.rs  settings.ts  settings_by_app.rs  settings_by_app.ts  settings_by_monitor.rs  settings_by_monitor.ts  theme.rs  theme.ts  weg_items.rs  weg_items.ts  widget.rs  widget.ts  wm_layout.rs  wm_layout.ts
(+168 files in other folders)
