[package]
name = "seelen-core"
version = "1.9.7"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
serde_alias = "0.0.2"
schemars = { version = "0.8.21", features = ["url", "uuid1"] }
regex = "1.10.4"
sys-locale = "0.3.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
ts-rs = { git = "https://github.com/eythaann/ts-rs.git", features = [
  "import-deno",
  "no-serde-warnings",
  "serde-json-impl",
  "url-impl",
  "uuid-impl",
] }
base64 = "0.22.1"
url = { version = "2.5.4", features = ["serde"] }
grass = { version = "0.13.4", default-features = false, features = ['random'] }

